# Bank_statement_reader

./: README.md  account_table.py  convert_pdfs_to_table.py  decrypt_and_save_pdfs.py  dependencies.py  extract_dates_from_text.py  extract_desc_from_text.py  extract_numbers_from_text.py  parameters.py  pdf_decrypter.py  pyproject.toml  setup.py  statement_reader.py
