[tool.poetry]
name = "statement-reader"
version = "0.1.0"
description = "PDF Bank Statement reader"
authors = ["Josh Overett <joverett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
PyPDF2 = "^3.0.1"
PyMuPDF = "^1.23.7"
regex = "^2023.10.3"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
